--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
-  font-size: 3.5vw;
-  font-weight: 100;
+}
+
+a:link, a:visited {
+    color: white;
+    text-decoration: none;
 }
 
 .backgroundLayer {
@@ -9,73 +12,74 @@ h1, h2, h3 {
   height: 100%;
   width: 100%;
   position: absolute;
-}
-
-.cardContent {
-  background-color: white;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-  width: 80%;
-  height: 80%;
-  -webkit-box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
-  box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
-  overflow: scroll;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
+.cardContent {
+  background-color: white;
+  margin: auto;
+  height: 750px;
+  width: 500px;
+  box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
+  overflow: scroll;
+}
+
 .cardHeader {
+  height: 75px;
+  font-weight: 100;
+  font-size: 50px;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
 .cardTitle {
-  padding-left: 2.5vw;
-  padding-top: 1.5vw;
+  margin-left: 3%;
+  margin-top: 3%;
 }
 
 .cardIcon {
-  padding-top: 1.5vw;
-  padding-right: 2vw;
+  margin-top: 2%;
+  margin-right: 2%;
 }
 
 .cardData {
-  font-size: 3vw;
+  font-size: 36px;
   font-weight: 100;
-  text-align: center;
-  padding: 15%;
+  text-align: left;
+  margin: auto;
+  padding-top: 200px;
+  height: 600px;
+  width: 400px;
 }
 
 .cardSwitch {
-  padding-bottom: 2.5vw;
-  padding-left: 68vw;
+  height: 75px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-
-/* The switch - the box around the slider */
 
 .switch {
   position: relative;
   display: inline-block;
-  width: 8vw;
-  height: 4vw;
+  width: 80px;
+  height: 45px;
+  margin-right: 5%;
 }
 
+.dataSource{
+  color: white;
+  margin-left: 2px;
+}
 
-/* Hide default HTML checkbox */
 
 .switch input {
   display: none;
 }
-
-
-/* The slider */
 
 .slider {
   position: absolute;
@@ -85,19 +89,17 @@ h1, h2, h3 {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
   transition: .4s;
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 3vw;
-  width: 3vw;
-  left: .75vw;
-  bottom: .5vw;
-  background-color: white;
-  -webkit-transition: .4s;
+  height: 35px;
+  width: 35px;
+  left: 8px;
+  bottom: 5px;
+  background-color: blue;
   transition: .4s;
 }
 
@@ -106,20 +108,16 @@ input:checked+.slider {
 }
 
 input:focus+.slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 10px #2196F3;
 }
 
 input:checked+.slider:before {
-  -webkit-transform: translateX(3vw);
-  -ms-transform: translateX(3vw);
-  transform: translateX(3.5vw);
+
+  transform: translateX(30px);
 }
 
-
-/* Rounded sliders */
-
 .slider.round {
-  border-radius: 2vw;
+  border-radius: 36px;
 }
 
 .slider.round:before {
