--- a/style.css
+++ b/style.css
@@ -25,14 +25,14 @@ i{
 .cardContent {
   background-color: white;
   margin: auto;
-  height: 50vw;
-  width: 30vw;
+  height: 60vw;
+  width: 35vw;
   box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
   overflow: scroll;
 }
 
 .cardHeader {
-  height: 8vw;
+  height: 4vw;
   font-weight: 100;
   font-size: 2.25vw;
   display: flex;
@@ -55,9 +55,9 @@ i{
   font-weight: 100;
   text-align: center;
   margin: auto;
-  padding-top: 6vw;
-  height: 36vw;
-  width: 23vw;
+  padding-top: 9.5vw;
+  height: 50vw;
+  width: 25vw;
 }
 
 .cardSwitch {
@@ -105,7 +105,7 @@ i{
   width: 3vw;
   left: .5vw;
   bottom: .5vw;
-  background-color: blue;
+  background-color: white;
   transition: .4s;
 }
 
