--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ i{
   font-weight: 100;
   text-align: center;
   margin: auto;
-  padding-top: 7.5vw;
-  height: 29vw;
+  padding-top: 8.5vw;
+  height: 30.5vw;
   width: 25vw;
 }
 
@@ -72,9 +72,9 @@ i{
 .switch {
   position: relative;
   display: inline-block;
-  width: 7vw;
-  height: 4vw;
-  margin-right: 1.5vw;
+  width: 3.5vw;
+  height: 2vw;
+  margin-right: .75vw;
 }
 
 .dataSource{
@@ -101,10 +101,10 @@ i{
 .slider:before {
   position: absolute;
   content: "";
-  height: 3vw;
-  width: 3vw;
-  left: .5vw;
-  bottom: .5vw;
+  height: 1.5vw;
+  width: 1.5vw;
+  left: .25vw;
+  bottom: .25vw;
   background-color: white;
   transition: .4s;
 }
@@ -114,16 +114,16 @@ input:checked+.slider {
 }
 
 input:focus+.slider {
-  box-shadow: 0 0 1.5vw #2196F3;
+  box-shadow: 0 0 .75vw #2196F3;
 }
 
 input:checked+.slider:before {
 
-  transform: translateX(3vw);
+  transform: translateX(1.5vw);
 }
 
 .slider.round {
-  border-radius: 2.5vw;
+  border-radius: 1.25vw;
 }
 
 .slider.round:before {
