--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1, h2, h3 {
   font-family: 'Raleway', sans-serif;
 }
 
-a:link, a:visited {
+a {
     color: white;
      text-decoration: none !important;
 }
@@ -25,14 +25,14 @@ i{
 .cardContent {
   background-color: white;
   margin: auto;
-  height: 40vw;
-  width: 25vw;
+  height: 70vh;
+  width: 22.5vw;
   box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
   overflow: scroll;
 }
 
 .cardHeader {
-  height: 5vw;
+  height: 5vh;
   font-weight: 100;
   font-size: 2.25vw;
   display: flex;
@@ -51,17 +51,17 @@ i{
 }
 
 .cardData {
-  font-size: 6.5vw;
+  font-size: 5.5vw;
   font-weight: 100;
   text-align: center;
   margin: auto;
   padding-top: 8.5vw;
-  height: 30.5vw;
-  width: 25vw;
+  height: 58vh;
+  width: 22.5;
 }
 
 .cardSwitch {
-  height: 5vw;
+  height: 5vh;
   display: flex;
   justify-content: flex-end;
   align-items: center;
