--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a {
 }
 
 i{
-  font-size: 4vw;
+  font-size: 50px;
 }
 
 .backgroundLayer {
@@ -25,16 +25,16 @@ i{
 .cardContent {
   background-color: white;
   margin: auto;
-  height: 40vh;
-  width: 35vw;
+  height: 500px;
+  width: 310px;
   box-shadow: 0px 0px 59px 5px rgba(0, 0, 0, 0.58);
   overflow: scroll;
 }
 
 .cardHeader {
-  height: 5vh;
+  height: 100px;
   font-weight: 100;
-  font-size: 2.25vw;
+  font-size: 30px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -51,32 +51,27 @@ i{
 }
 
 .cardData {
-  font-size: 5.5vw;
+  font-size: 50px;
   font-weight: 100;
   text-align: center;
   margin: auto;
-  padding-top: 5.5vh;
-  height: 31vh;
-  width: 22.5;
+  padding-top: 50px;
+  height: 350px;
 }
 
 .cardSwitch {
-  height: 5vh;
+  height: 60px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-bottom: 1.5vw
-  padding-left: 1vw;
 }
-
-
 
 .switch {
   position: relative;
   display: inline-block;
-  width: 3.5vw;
-  height: 2vw;
-  margin-right: .75vw;
+  width: 42px;
+  height: 24px;
+  margin-right: 4px;
 }
 
 .dataSource{
@@ -103,10 +98,10 @@ i{
 .slider:before {
   position: absolute;
   content: "";
-  height: 1.5vw;
-  width: 1.5vw;
-  left: .25vw;
-  bottom: .25vw;
+  height: 18px;
+  width: 18px;
+  left: 5px;
+  bottom: 3px;
   background-color: white;
   transition: .4s;
 }
@@ -116,16 +111,16 @@ input:checked+.slider {
 }
 
 input:focus+.slider {
-  box-shadow: 0 0 .75vw #2196F3;
+  box-shadow: 0 0 8px #2196F3;
 }
 
 input:checked+.slider:before {
 
-  transform: translateX(1.5vw);
+  transform: translateX(18px);
 }
 
 .slider.round {
-  border-radius: 1.25vw;
+  border-radius: 12px;
 }
 
 .slider.round:before {
